force-app/main/default/objects/Filter_Rule__mdt/Filter_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Individual Filter Rules for each Filter Group</description>
    <label>Filter Rule</label>
    <pluralLabel>Filter Rules</pluralLabel>
</CustomObject>