force-app/main/default/objects/Filter_Rule__mdt/fields/Constant__c.field-meta.xml
<CustomField>
    <fullName>Constant__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>