force-app/main/default/objects/Filter_Rule__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Filter_Rule__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Filter_Rules</relationshipLabel>
    <relationshipName>Filter_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>