force-app/main/default/objects/Filter_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not_Equals</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>Greater</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>Less</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>Greater_or_Equal</fullName>
                <label>Greater or Equal</label>
            </value>
            <value>
                <fullName>Less_or_Equal</fullName>
                <label>Less or Equal</label>
            </value>
            <value>
                <fullName>Starts_With</fullName>
                <label>Starts With</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does_Not_Contain</fullName>
                <label>Does Not Contain</label>
            </value>
            <value>
                <fullName>In_List</fullName>
                <label>In List</label>
            </value>
            <value>
                <fullName>Not_In_List</fullName>
                <label>Not In List</label>
            </value>
            <value>
                <fullName>Is_Included</fullName>
                <label>Is Included</label>
            </value>
            <value>
                <fullName>Is_Not_Included</fullName>
                <label>Is Not Included</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>